--- a/creators-wanted/src/locales/ja.json
+++ b/creators-wanted/src/locales/ja.json
@@ -16,8 +16,8 @@
   "sectionBasic": "基本情報",
   "sectionEntry": "申込情報",
   "boothType": "ブースタイプ",
-  "boothTypeStandard": "シングルブース",
-  "boothTypeDouble": "ダブルブース",
+  "boothTypeStandard": "標準ブース",
+  "boothTypeDouble": "豪華ブース",
   "creatorName": "クリエイター名",
   "creatorName2": "クリエイター名2",
   "realName": "本名",
