--- a/creators-wanted/src/locales/ja.json
+++ b/creators-wanted/src/locales/ja.json
@@ -7,7 +7,7 @@
   "activityInfoTitle": "イベント情報",
   "activityInfo": "イベント名：2026 Adultopia 大人國\n開催日：2026/03/28-2026/03/29\n　クリエイター入場時間：09:00-18:00\n　ファストパス入場時間：09:30-18:00\n　一般入場時間：10:00-18:00\n会場：桃園会展中心\n住所：桃園市中壢区領航北路一段99号",
   "boothRecruitTitle": "ブース募集情報",
-  "boothRecruitInfo": "ブース募集期間：2026/01/10 オンライン受付開始\n募集締切：2026/01/31 締切\nブース数：\n　シングルブース毎日____ブース\n　ダブルブース毎日____ブース\n募集ジャンル：コスプレ、写真集、KOL、アニメグッズ、同人誌",
+  "boothRecruitInfo": "ブース募集期間：2026/01/10 オンライン受付開始\n募集締切：2026/01/31 締切\nブース数：\n　標準ブース毎日____ブース\n　豪華ブース毎日____ブース\n募集ジャンル：コスプレ、写真集、KOL、アニメグッズ、同人誌",
   "boothInfoTitle": "ブース情報",
   "entryGuide": "申込要項",
   "boothEntryTitle": "ブース申込情報入力",
