--- a/creators-wanted/src/locales/ja.json
+++ b/creators-wanted/src/locales/ja.json
@@ -28,6 +28,7 @@
   "instagram": "SNSリンク：Instagram",
   "twitter": "SNSリンク：X（旧Twitter）",
   "otherSocial": "SNSリンク：その他",
+  "entryDays": "参加日",
   "boothName": "ブース名",
   "boothSubtitle": "ブースサブタイトル",
   "lanternName": "提灯名（6文字以内）",
