紹介者追加

--- a/creators-wanted/src/locales/ja.json
+++ b/creators-wanted/src/locales/ja.json
@@ -40,6 +40,7 @@
   "remarks": "連絡事項：",
   "remarksDesc": "（特別な要望があればご記入、またはメールまでご連絡ください。）",
   "remarksPlaceholder": "連絡事項",
+  "recommender": "紹介者",
   "submitSending": "送信中...",
   "submitConfirm": "申込",
   "contactTitle": "大人國｜連絡窓口",
