--- a/creators-wanted/src/locales/ko.json
+++ b/creators-wanted/src/locales/ko.json
@@ -40,6 +40,7 @@
   "remarks": "연락 사항:",
   "remarksDesc": "(특별한 요청이 있으면 기입하거나 이메일로 연락해 주세요.)",
   "remarksPlaceholder": "연락 사항",
+  "recommender": "추천인",
   "submitSending": "전송 중...",
   "submitConfirm": "신청",
   "contactTitle": "어른의 나라｜연락처",
