--- a/creators-wanted/src/locales/zh-TW.json
+++ b/creators-wanted/src/locales/zh-TW.json
@@ -39,6 +39,7 @@
   "remarks": "備註：",
   "remarksDesc": "（若有任何特別需求請告知我們，或寄信給官方信箱，我們會儘速回覆您）",
   "remarksPlaceholder": "備註、特別需求",
+  "recommender": "推薦人",
   "submitSending": "送信中...",
   "submitConfirm": "確認報名",
   "contactTitle": "大人國｜創作者聯繫",
