--- a/creators-wanted/src/locales/ko.json
+++ b/creators-wanted/src/locales/ko.json
@@ -31,6 +31,7 @@
   "otherSocial": "SNS 링크: 기타",
   "boothName": "부스명",
   "boothSubtitle": "부스 부제목",
+  "boothContent": "판매 내용",
   "lanternName": "등롱명(6자 이내)",
   "lanternSubtitle": "등롱 부제목",
   "promo1": "홍보 자료 1(사이즈: 1080 x 1920 이상)",
