--- a/creators-wanted/src/locales/zh-TW.json
+++ b/creators-wanted/src/locales/zh-TW.json
@@ -30,6 +30,7 @@
   "otherSocial": "社群連結：其他",
   "boothName": "攤位名稱",
   "boothSubtitle": "攤位副標",
+  "boothContent": "販售內容",
   "lanternName": "燈籠名稱（限六個字以内）",
   "lanternSubtitle": "燈籠副標",
   "promo1": "宣傳素材1（尺寸規格：至少為1080 x 1920）",
